k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
