k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoeshop-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shoeshop.viennnguyen1301.com
    secretName: shoeshop-tls
  rules:
  - host: shoeshop.viennnguyen1301.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoeshop-service
            port:
              number: 80
